# efficiency-cockpit

./: .gitignore  Cargo.toml  LICENSE  Makefile  PLAN.md  Package.swift  README.md  project.yml
.claude/: ralph-loop.local.md
EfficiencyCockpit/: EfficiencyCockpit.entitlements  Info.plist
EfficiencyCockpit/App/: AppState.swift  EfficiencyCockpitApp.swift
EfficiencyCockpit/Core/: AppIdentifiers.swift
EfficiencyCockpit/Core/Extensions/: Data+JSON.swift  TimeInterval+Formatting.swift
EfficiencyCockpit/Core/Models/: AIInteraction.swift  Activity.swift  AppSession.swift  ContentIndex.swift  ContextSnapshot.swift  DailySummary.swift  Decision.swift  ProductivityInsight.swift
EfficiencyCockpit/Core/Services/: ClaudeService.swift  ContentIndexingService.swift  DigestAnalysisService.swift  NotificationService.swift
EfficiencyCockpit/Core/Services/ActivityTracker/: AIToolUsageTracker.swift  ActivityTrackingService.swift  BrowserTabTracker.swift  GitActivityTracker.swift  IDEFileTracker.swift  WindowTracker.swift
EfficiencyCockpit/Core/Services/Permissions/: PermissionManager.swift
EfficiencyCockpit/UI/Dashboard/: AskClaudeView.swift  DashboardView.swift  DecideView.swift  DigestView.swift  ResumeView.swift  SearchView.swift
EfficiencyCockpit/UI/MenuBar/: MenuBarView.swift
EfficiencyCockpit/UI/Onboarding/: OnboardingView.swift
EfficiencyCockpit/UI/Settings/: SettingsView.swift
EfficiencyCockpitMCPServer/: DataAccess.swift  main.swift
data/: config_example.toml
src/: ai.rs  cli.rs  config.rs  db.rs  error.rs  gatekeeper.rs  lib.rs  main.rs  search.rs  snapshot.rs  utils.rs  watcher.rs
tests/: integration_test.rs
