[package]
name = "efficiency_cockpit"
version = "0.1.0"
edition = "2021"

[dependencies]
# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching
notify = "6.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Search/indexing
tantivy = "0.22"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# System directories
dirs = "5.0"
