[package]
name = "efficiency_cockpit"
version = "0.1.0"
edition = "2021"

[dependencies]
# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching
notify = "6.1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Search/indexing
tantivy = "0.22"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# System directories
dirs = "5.0"

# Regex for pattern validation
regex = "1.10"

# Directory traversal
walkdir = "2.4"

# CLI colors
colored = "2.1"

# Signal handling
ctrlc = "3.4"

# JSON serialization for export
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
